[gd_scene load_steps=3 format=2]

[ext_resource path="res://Grid_generator/Grid_generator.gd" type="Script" id=1]
[ext_resource path="res://Grid_generator/Canvas.gd" type="Script" id=2]

[node name="Grid_generator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 221.0
margin_bottom = 600.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Settings" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 211.0
margin_bottom = 590.0
size_flags_horizontal = 3
custom_constants/separation = 25

[node name="Setting_labels" type="VBoxContainer" parent="HBoxContainer/MarginContainer/Settings"]
margin_right = 101.0
margin_bottom = 580.0

[node name="Grid_height_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_right = 101.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Grid height"
align = 1
valign = 1

[node name="Grid_width_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_top = 73.0
margin_right = 101.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Grid width"
align = 1
valign = 1

[node name="Cell_size_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_top = 146.0
margin_right = 101.0
margin_bottom = 215.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell size"
align = 1
valign = 1

[node name="Grid_orientation_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_top = 219.0
margin_right = 101.0
margin_bottom = 288.0
size_flags_vertical = 3
text = "Grid orientation"
align = 1
valign = 1

[node name="Rows_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_top = 292.0
margin_right = 101.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rows"
align = 1
valign = 1

[node name="Columns_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_top = 365.0
margin_right = 101.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Columns"
align = 1
valign = 1

[node name="Fill_color_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_top = 438.0
margin_right = 101.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fill color
(HTML #hex)"
align = 1
valign = 1

[node name="Border_color_lbl" type="Label" parent="HBoxContainer/MarginContainer/Settings/Setting_labels"]
margin_top = 511.0
margin_right = 101.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Border color
(HTML #hex)"
align = 1
valign = 1

[node name="Setting_widgets" type="VBoxContainer" parent="HBoxContainer/MarginContainer/Settings"]
margin_left = 126.0
margin_right = 201.0
margin_bottom = 580.0

[node name="Grid_height" type="HSlider" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_right = 75.0
margin_bottom = 69.0
hint_tooltip = "150 -> 600, step 50"
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 150.0
max_value = 600.0
step = 50.0
value = 150.0

[node name="Grid_width" type="HSlider" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_top = 73.0
margin_right = 75.0
margin_bottom = 142.0
hint_tooltip = "150 -> 600, step 50"
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 150.0
max_value = 600.0
step = 50.0
value = 150.0

[node name="Cell_size" type="HSlider" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_top = 146.0
margin_right = 75.0
margin_bottom = 215.0
hint_tooltip = "5 -> 50, step 5"
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 5.0
max_value = 50.0
step = 5.0
value = 5.0

[node name="CenterContainer1" type="CenterContainer" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_top = 219.0
margin_right = 75.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid_orientation" type="OptionButton" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets/CenterContainer1"]
margin_top = 9.0
margin_right = 75.0
margin_bottom = 59.0
rect_min_size = Vector2( 75, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ODD-R"
items = [ "ODD-R", null, false, 0, null, "EVEN-R", null, false, 1, null, "ODD-Q", null, false, 2, null, "EVEN-Q", null, false, 3, null ]
selected = 0

[node name="Rows" type="HSlider" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_top = 292.0
margin_right = 75.0
margin_bottom = 361.0
hint_tooltip = "1 -> 80*, step 1"
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 80.0
value = 1.0

[node name="Columns" type="HSlider" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_top = 365.0
margin_right = 75.0
margin_bottom = 434.0
hint_tooltip = "1 -> 80*, step 1"
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 80.0
value = 1.0

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_top = 438.0
margin_right = 75.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fill_color" type="LineEdit" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets/CenterContainer2"]
margin_top = 9.0
margin_right = 75.0
margin_bottom = 59.0
rect_min_size = Vector2( 75, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "#FFFFFF"
align = 1
max_length = 7

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets"]
margin_top = 511.0
margin_right = 75.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Border_color" type="LineEdit" parent="HBoxContainer/MarginContainer/Settings/Setting_widgets/CenterContainer3"]
margin_top = 9.0
margin_right = 75.0
margin_bottom = 59.0
rect_min_size = Vector2( 75, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "#000000"
align = 1
max_length = 7

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 225.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Canvas" type="Control" parent="HBoxContainer/CenterContainer"]
margin_left = 324.0
margin_top = 225.0
margin_right = 474.0
margin_bottom = 375.0
rect_min_size = Vector2( 150, 150 )
script = ExtResource( 2 )

[connection signal="drag_ended" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/Grid_height" to="." method="_on_Grid_height_drag_ended"]
[connection signal="drag_ended" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/Grid_width" to="." method="_on_Grid_width_drag_ended"]
[connection signal="drag_ended" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/Cell_size" to="." method="_on_Cell_size_drag_ended"]
[connection signal="item_selected" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/CenterContainer1/Grid_orientation" to="." method="_on_Grid_orientation_item_selected"]
[connection signal="drag_ended" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/Rows" to="." method="_on_Rows_drag_ended"]
[connection signal="drag_ended" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/Columns" to="." method="_on_Columns_drag_ended"]
[connection signal="text_changed" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/CenterContainer2/Fill_color" to="." method="_on_Fill_color_text_changed"]
[connection signal="text_changed" from="HBoxContainer/MarginContainer/Settings/Setting_widgets/CenterContainer3/Border_color" to="." method="_on_Border_color_text_changed"]
